--- a/libemu-console/CMakeLists.txt
+++ b/libemu-console/CMakeLists.txt
@@ -9,9 +9,8 @@ elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     add_compile_options(/arch:AVX2)
 endif ()
 
-include_directories(../include ../libemu-dasm)
-link_directories(${libemu-dasm_BINARY_DIR})
-
 add_executable(libemu-console main.cpp)
 add_dependencies(libemu-console libemu-dasm)
+target_include_directories(libemu-console PUBLIC ../include ../libemu-dasm)
+target_link_directories(libemu-console PUBLIC ${libemu-dasm_BINARY_DIR})
 target_link_libraries(libemu-console PUBLIC libemu-dasm.so)
