Fix compilation on windows

--- a/libemu-console/CMakeLists.txt
+++ b/libemu-console/CMakeLists.txt
@@ -13,4 +13,4 @@ add_executable(libemu-console main.cpp)
 add_dependencies(libemu-console libemu-dasm)
 target_include_directories(libemu-console PUBLIC ../include ../libemu-dasm)
 target_link_directories(libemu-console PUBLIC ${libemu-dasm_BINARY_DIR})
-target_link_libraries(libemu-console PUBLIC libemu-dasm.so)
+target_link_libraries(libemu-console PUBLIC libemu-dasm)
