--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,6 +28,8 @@ jobs:
     - name: Setup GCC
       if: runner.os == 'Linux' || runner.os == 'macOS'
       uses: Dup4/actions-setup-gcc@v1
+      with:
+        version: 13
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
