--- a/libemu-dasm/CMakeLists.txt
+++ b/libemu-dasm/CMakeLists.txt
@@ -11,10 +11,6 @@ endif ()
 
 set(SOURCES mos6502/mos6502_disassembler.cpp)
 
-add_library(libemu-dasm SHARED ${SOURCES})
-add_library(libemu-dasm-static STATIC ${SOURCES})
+add_library(libemu-dasm STATIC ${SOURCES})
 set_target_properties(libemu-dasm PROPERTIES PREFIX "")
-set_target_properties(libemu-dasm-static PROPERTIES PREFIX "")
-set_target_properties(libemu-dasm-static PROPERTIES OUTPUT_NAME "libemu-dasm")
 target_include_directories(libemu-dasm PUBLIC ../include)
-target_include_directories(libemu-dasm-static PUBLIC ../include)
