--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,6 +20,7 @@ jobs:
         os:
           - windows-latest
           - ubuntu-latest
+          - macos-latest
     runs-on: ${{ matrix.os }}
 
     steps:
