--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/build-win -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       # Build your program with the given configuration
@@ -43,8 +43,25 @@ jobs:
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
-    - uses: actions/upload-artifact@v3
+      
+    - if: if: ${{runner.os}} == 'Windows'
+      name: Upload - Windows
+      uses: actions/upload-artifact@v3
       with:
-        name: libemu
+        name: libemu-windows
+        path: |
+          build/
+    - if: if: ${{runner.os}} == 'Linux'
+      name: Upload - Linux
+      uses: actions/upload-artifact@v3
+      with:
+        name: libemu-linux
+        path: |
+          build/
+    - if: if: ${{runner.os}} == 'macOS'
+      name: Upload - macOS
+      uses: actions/upload-artifact@v3
+      with:
+        name: libemu-macos
         path: |
           build/
