Move command stringify process to operation struct

--- a/libemu-dasm/CMakeLists.txt
+++ b/libemu-dasm/CMakeLists.txt
@@ -9,7 +9,7 @@ elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     add_compile_options(/arch:AVX2)
 endif ()
 
-set(SOURCES mos6502/mos6502_disassembler.cpp)
+set(SOURCES mos6502/mos6502_disassembler.cpp mos6502/mos6502_operation.cpp)
 
 add_library(libemu-dasm STATIC ${SOURCES})
 set_target_properties(libemu-dasm PROPERTIES PREFIX "")
